sample_manifest (33).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'topologyviewer-async-development-dev2'
  namespace: 'topologyviewer-dev'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'topologyviewer-async'
    branch: 'development'
    commit: '92f6d78'
    role: java
    environment: dev2
spec:
  rules:
    - host: topologyviewer-async-dev2.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'topologyviewer-development-dev2'
              servicePort: 8080
  tls:
    - hosts:
      - 'topologyviewer-async-dev2.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'topologyviewer-async-development-dev2'
  namespace: 'topologyviewer-dev'
  labels:
    project: 'topologyviewer-async'
    branch: 'development'
    commit: '92f6d78'
    role: java
    environment: dev2
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'topologyviewer-async'
    branch: 'development'
    commit: '92f6d78'
    role: java
    environment: dev2
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'topologyviewer-async-development-dev2'
  labels:
    project: 'topologyviewer-async'
    branch: 'development'
    commit: '92f6d78'
    role: java
    environment: dev2
spec:
  selector:
    matchLabels:
      project: 'topologyviewer-async'
      branch: 'development'
      role: java
      environment: dev2
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'topologyviewer-async'
        branch: 'development'
        commit: '92f6d78'
        role: java
        environment: dev2
    spec:
      containers:
        - name: topologyviewer-async-dev2
          image: 'nexusprod.corp.intranet:4567/topologyviewer/topologyviewer-async/topologyviewer-async:dev2_20220407'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 8Gi
            requests:
              memory: 6000Mi
      imagePullSecrets:
        - name: topologyviewer-async-pr-null
---
---
